# temm1e

./: .env.example  AGENTIC_DEVELOPER_PROTOCOL.md  CLAUDE.md  Cargo.toml  DEV_PROTOCOL.md  Dockerfile  FEATURES.md  MIGRATION.md  Makefile  README.md  SETUP_FOR_NEWBIE.md  SETUP_FOR_PROS.md  TEMM1E_ROADMAP.md  VISION.md  docker-compose.yml  news.html  rss.xml  temm1e.toml
config/: default.toml
crates/skyclaw-channels/: Cargo.toml
crates/skyclaw-channels/src/: cli.rs  file_transfer.rs  lib.rs  telegram.rs
crates/skyclaw-codex-oauth/: Cargo.toml
crates/skyclaw-codex-oauth/src/: callback_server.rs  lib.rs  responses_provider.rs  token_store.rs
crates/skyclaw-gateway/: Cargo.toml
crates/skyclaw-gateway/src/: health.rs  lib.rs  router.rs  server.rs  session.rs
crates/skyclaw-memory/: Cargo.toml
crates/skyclaw-memory/src/: lib.rs  markdown.rs  search.rs  sqlite.rs
crates/skyclaw-providers/: Cargo.toml
crates/skyclaw-providers/src/: anthropic.rs  lib.rs  openai_compat.rs
crates/temm1e-agent/: Cargo.toml
crates/temm1e-agent/examples/: witness_complexity_probe.rs  witness_full_ab.rs  witness_gemini_ab.rs  witness_live_wiring.rs  witness_refactor_ab.rs
crates/temm1e-agent/src/: agent_task_status.rs  blueprint.rs  budget.rs  circuit_breaker.rs  consciousness.rs  consciousness_engine.rs  context.rs  delegation.rs  done_criteria.rs  executor.rs  history_pruning.rs  lambda_memory.rs  learning.rs  lib.rs  llm_classifier.rs  model_router.rs  output_compression.rs  proactive.rs  prompt_optimizer.rs  prompt_patches.rs  prompted_tool_calling.rs  recovery.rs  runtime.rs  self_correction.rs  spawn_swarm.rs  stagnation.rs  startup.rs  streaming.rs  task_decomposition.rs  task_queue.rs  watchdog.rs  witness_init.rs
crates/temm1e-agent/tests/: runtime_integration.rs  witness_integration.rs  witness_wiring_regression.rs
crates/temm1e-automation/: Cargo.toml
crates/temm1e-automation/src/: duration.rs  heartbeat.rs  lib.rs  system_notifier.rs
crates/temm1e-automation/tests/: system_notifier_integration.rs
crates/temm1e-channels/: Cargo.toml
crates/temm1e-channels/src/: cli.rs  discord.rs  file_transfer.rs  lib.rs  slack.rs  telegram.rs  whatsapp_web.rs
crates/temm1e-codex-oauth/: Cargo.toml
crates/temm1e-codex-oauth/src/: callback_server.rs  lib.rs  pkce.rs  responses_provider.rs  token_store.rs
crates/temm1e-core/: Cargo.toml
crates/temm1e-core/src/: lib.rs  orchestrator_impl.rs  tenant_impl.rs
crates/temm1e-core/src/config/: credentials.rs  env.rs  loader.rs  mod.rs
crates/temm1e-core/src/traits/: channel.rs  filestore.rs  identity.rs  memory.rs  mod.rs  observable.rs  orchestrator.rs  peripheral.rs  provider.rs  setup.rs  tenant.rs  tool.rs  tunnel.rs  usage.rs  vault.rs
crates/temm1e-core/src/types/: config.rs  error.rs  file.rs  message.rs  mod.rs  model_registry.rs  optimization.rs  session.rs  system_event.rs
crates/temm1e-distill/: Cargo.toml
crates/temm1e-distill/src/: collector.rs  config.rs  lib.rs  scorer.rs  store.rs  types.rs
crates/temm1e-distill/src/backends/: ollama.rs
crates/temm1e-distill/src/engine/: graduation.rs  mod.rs  monitor.rs  router.rs  shadow.rs  state_machine.rs
crates/temm1e-distill/src/judge/: behavior.rs  embedding.rs  mod.rs
crates/temm1e-distill/src/stats/: beta.rs  cusum.rs  entropy.rs  mod.rs  power.rs  sprt.rs  thompson.rs  wilson.rs
crates/temm1e-distill/tests/: bench_eigentune.rs  proof_of_pipeline.rs
crates/temm1e-filestore/: Cargo.toml
crates/temm1e-filestore/src/: lib.rs  local.rs  s3.rs
crates/temm1e-gateway/: Cargo.toml
crates/temm1e-gateway/src/: dashboard.rs  identity.rs  lib.rs  router.rs  server.rs  session.rs  setup_tokens.rs
crates/temm1e-gateway/tests/: health_integration.rs
crates/temm1e-hive/: Cargo.toml
crates/temm1e-hive/src/: blackboard.rs  config.rs  dag.rs  lib.rs  pheromone.rs  queen.rs  selection.rs  types.rs  worker.rs
crates/temm1e-hive/tests/: context_degradation_bench.rs  live_ab_bench.rs  project_bench.rs  project_bench_py.rs  project_bench_v2.rs
crates/temm1e-mcp/: Cargo.toml
crates/temm1e-mcp/src/: bridge.rs  client.rs  config.rs  jsonrpc.rs  lib.rs  manager.rs  mcp_manage.rs  self_add.rs  self_extend.rs
crates/temm1e-mcp/src/transport/: http.rs  mod.rs  stdio.rs
crates/temm1e-memory/: Cargo.toml
crates/temm1e-memory/src/: failover.rs  lib.rs  markdown.rs  search.rs  sqlite.rs  sqlite_usage.rs
crates/temm1e-memory/tests/: memory_integration.rs
crates/temm1e-observable/: Cargo.toml
crates/temm1e-observable/src/: lib.rs  metrics.rs  otel.rs
crates/temm1e-providers/: Cargo.toml
crates/temm1e-providers/examples/: gemini_max_tokens_probe.rs
crates/temm1e-providers/src/: anthropic.rs  gemini.rs  lib.rs  openai_compat.rs
crates/temm1e-skills/: Cargo.toml
crates/temm1e-skills/src/: lib.rs
crates/temm1e-test-utils/: Cargo.toml
crates/temm1e-test-utils/src/: lib.rs
crates/temm1e-tools/: Cargo.toml
crates/temm1e-tools/src/: browser.rs  check_messages.rs  custom_tools.rs  file.rs  git.rs  key_manage.rs  lambda_recall.rs  lib.rs  memory_manage.rs  mode_switch.rs  send_file.rs  send_message.rs  shell.rs  usage_audit.rs  web_fetch.rs  web_search.rs
crates/temm1e-tools/src/web_search/: types.rs
crates/temm1e-tui/: Cargo.toml
crates/temm1e-tui/src/: agent_bridge.rs  app.rs  channel.rs  event.rs  lib.rs
crates/temm1e-tui/src/commands/: builtin.rs  completer.rs  mod.rs  registry.rs
crates/temm1e-tui/src/input/: handler.rs  keybindings.rs  mod.rs  multiline.rs
crates/temm1e-tui/src/onboarding/: mod.rs  oauth.rs  steps.rs
crates/temm1e-tui/src/streaming/: mod.rs  renderer.rs  token_counter.rs
crates/temm1e-tui/src/testing/: harness.rs  mod.rs
crates/temm1e-tui/src/theme/: mod.rs  palette.rs
crates/temm1e-witness/: Cargo.toml
crates/temm1e-witness/examples/: ab_bench.rs  e2e_demo.rs  full_sweep.rs
crates/temm1e-witness/src/: auto_detect.rs  config.rs  error.rs  ledger.rs  lib.rs  oath.rs  planner.rs  predicate_sets.rs  predicates.rs  types.rs  witness.rs
crates/temm1e-witness/tests/: laws.rs  redteam.rs  redteam_advanced.rs
(+258 files in other folders)
