[workspace]
resolver = "2"
exclude = ["docs/swarm/experiment_artifacts"]
members = [
    "crates/temm1e-core",
    "crates/temm1e-gateway",
    "crates/temm1e-agent",
    "crates/temm1e-providers",
    "crates/temm1e-channels",
    "crates/temm1e-memory",
    "crates/temm1e-vault",
    "crates/temm1e-tools",
    "crates/temm1e-skills",
    "crates/temm1e-automation",
    "crates/temm1e-observable",
    "crates/temm1e-filestore",
    "crates/temm1e-test-utils",
    "crates/temm1e-mcp",
    "crates/temm1e-codex-oauth",
    "crates/temm1e-tui",
    "crates/temm1e-hive",
    "crates/temm1e-distill",
    "crates/temm1e-gaze",
]

[workspace.package]
version = "4.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nagisanzenin/temm1e"
rust-version = "1.82"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# HTTP
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"] }

# Messaging
teloxide = { version = "0.17", features = ["macros"] }
serenity = { version = "0.12", features = ["gateway", "model"] }
poise = "0.6"
wa-rs = { version = "0.2", default-features = false, features = ["sqlite-storage", "tokio-transport", "ureq-client", "tokio-native"] }
wa-rs-core = { version = "0.2", default-features = false }
wa-rs-binary = { version = "0.2", default-features = false }
wa-rs-sqlite-storage = "0.2"
wa-rs-tokio-transport = "0.2"
wa-rs-ureq-http = "0.2"
qrcode = "0.14"

# Crypto
chacha20poly1305 = "0.10"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["serde"] }
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = "0.27"
tracing-opentelemetry = "0.28"

# Browser
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
htmd = "0.5"

# Object storage
aws-sdk-s3 = "1"
aws-config = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Config
config = "0.14"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"

# Utilities
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
regex = "1"
base64 = "0.22"
aes-gcm = "0.10"
hex = "0.4"
dirs = "6"
pin-project-lite = "0.2"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }

# Internal crates
temm1e-core = { path = "crates/temm1e-core" }
temm1e-gateway = { path = "crates/temm1e-gateway" }
temm1e-agent = { path = "crates/temm1e-agent" }
temm1e-providers = { path = "crates/temm1e-providers" }
temm1e-channels = { path = "crates/temm1e-channels" }
temm1e-memory = { path = "crates/temm1e-memory" }
temm1e-vault = { path = "crates/temm1e-vault" }
temm1e-tools = { path = "crates/temm1e-tools" }
temm1e-skills = { path = "crates/temm1e-skills" }
temm1e-automation = { path = "crates/temm1e-automation" }
temm1e-observable = { path = "crates/temm1e-observable" }
temm1e-filestore = { path = "crates/temm1e-filestore" }
temm1e-test-utils = { path = "crates/temm1e-test-utils" }
temm1e-mcp = { path = "crates/temm1e-mcp" }
temm1e-codex-oauth = { path = "crates/temm1e-codex-oauth" }
temm1e-tui = { path = "crates/temm1e-tui" }
temm1e-hive = { path = "crates/temm1e-hive" }
temm1e-distill = { path = "crates/temm1e-distill" }
temm1e-gaze = { path = "crates/temm1e-gaze" }

[package]
name = "temm1e"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cloud-native Rust AI agent runtime"

[[bin]]
name = "temm1e"
path = "src/main.rs"

[dependencies]
temm1e-core.workspace = true
temm1e-gateway.workspace = true
temm1e-agent.workspace = true
temm1e-providers.workspace = true
temm1e-channels.workspace = true
temm1e-memory.workspace = true
temm1e-vault.workspace = true
temm1e-tools.workspace = true
temm1e-skills.workspace = true
temm1e-automation.workspace = true
temm1e-observable.workspace = true
temm1e-filestore.workspace = true
temm1e-mcp = { workspace = true, optional = true }
temm1e-codex-oauth = { workspace = true, optional = true }
temm1e-tui = { workspace = true, optional = true }
temm1e-gaze = { workspace = true, optional = true }
temm1e-hive.workspace = true
tokio.workspace = true
clap.workspace = true
dirs.workspace = true
aes-gcm.workspace = true
hex.workspace = true
base64.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
tokio-util.workspace = true
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = ["telegram", "discord", "browser", "mcp", "codex-oauth", "desktop-control"]
telegram = ["temm1e-channels/telegram"]
discord = ["temm1e-channels/discord"]
slack = ["temm1e-channels/slack"]
browser = ["temm1e-tools/browser"]
postgres = ["temm1e-memory/postgres"]
mcp = ["dep:temm1e-mcp"]
codex-oauth = ["dep:temm1e-codex-oauth"]
tui = ["dep:temm1e-tui"]
desktop-control = ["dep:temm1e-gaze", "temm1e-tools/desktop-control"]
whatsapp = ["temm1e-channels/whatsapp"]
whatsapp-web = ["temm1e-channels/whatsapp-web"]
openssl-vendored = ["dep:openssl"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "unwind"  # Required for catch_unwind — enables per-task panic recovery
