[package]
name = "skyclaw-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HTTP/WebSocket gateway for SkyClaw"

[dependencies]
skyclaw-core.workspace = true
skyclaw-agent.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
