[package]
name = "skyclaw-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LLM provider integrations for SkyClaw"

[dependencies]
skyclaw-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
async-trait.workspace = true
