[package]
name = "temm1e-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Agent runtime for TEMM1E"

[dependencies]
temm1e-core.workspace = true
temm1e-vault.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sqlx.workspace = true
base64.workspace = true
tokio-util.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
temm1e-test-utils.workspace = true
async-trait.workspace = true
toml.workspace = true
tempfile = "3"
