[package]
name = "temm1e-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Messaging channel integrations for TEMM1E"

[features]
telegram = ["dep:teloxide", "dep:reqwest"]
discord = ["dep:serenity", "dep:poise", "dep:reqwest"]
slack = ["dep:reqwest"]

[dependencies]
temm1e-core.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
url.workspace = true
toml.workspace = true
dirs.workspace = true

# Optional: Telegram
teloxide = { workspace = true, optional = true }

# Optional: Discord
serenity = { workspace = true, optional = true }
poise = { workspace = true, optional = true }

# Optional: Slack (also used by Telegram for file downloads)
reqwest = { workspace = true, optional = true, features = ["multipart"] }

[dev-dependencies]
temm1e-test-utils.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
