[package]
name = "temm1e-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core traits and types for TEMM1E"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
bytes.workspace = true
uuid.workspace = true
chrono.workspace = true
url.workspace = true
futures.workspace = true
tokio-stream.workspace = true
regex.workspace = true
dirs.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
