[package]
name = "temm1e-distill"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Eigen-Tune: Self-tuning knowledge distillation engine"

[dependencies]
temm1e-core = { path = "../temm1e-core" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
