[package]
name = "temm1e-filestore"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "File and object storage for TEMM1E"

[features]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]

[dependencies]
temm1e-core.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true

# Optional: S3-compatible storage
aws-sdk-s3 = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }

[dev-dependencies]
temm1e-test-utils.workspace = true
tempfile = "3"
toml.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
futures = { workspace = true }
