[package]
name = "temm1e-hive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Stigmergic swarm intelligence runtime for TEMM1E"

[dependencies]
temm1e-core = { path = "../temm1e-core" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
toml = { workspace = true }
temm1e-providers = { path = "../temm1e-providers" }
tokio-util = { workspace = true }
