[package]
name = "temm1e-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP (Model Context Protocol) client for TEMM1E — connects to external MCP servers and exposes their tools"

[dependencies]
temm1e-core.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "sync", "time", "rt"] }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
toml.workspace = true
dirs.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
