[package]
name = "temm1e-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LLM provider integrations for TEMM1E"

[dependencies]
temm1e-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
temm1e-test-utils.workspace = true
