[package]
name = "temm1e-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tool integrations for TEMM1E agents"

[features]
browser = ["dep:chromiumoxide", "dep:futures", "dep:base64"]

[dependencies]
temm1e-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
bytes.workspace = true
chrono.workspace = true
dirs.workspace = true

# Optional: Browser automation
chromiumoxide = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
temm1e-test-utils.workspace = true
