[package]
name = "temm1e-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Interactive TUI for TEMM1E — Claude Code-level terminal experience"

[dependencies]
# Internal
temm1e-core.workspace = true
temm1e-agent.workspace = true
temm1e-providers.workspace = true
temm1e-memory.workspace = true
temm1e-vault.workspace = true
temm1e-tools.workspace = true
temm1e-codex-oauth = { workspace = true, optional = true }
temm1e-mcp = { workspace = true, optional = true }

# TUI framework
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Text rendering
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
unicode-width = "0.2"
textwrap = "0.16"

# Fuzzy matching
nucleo = "0.5"

# Async
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
bytes.workspace = true

# Base64 for the OSC 52 clipboard fallback (universal — works in
# any terminal that supports the OSC 52 escape sequence).
base64 = "0.22"

# Native clipboard via `arboard` — used on macOS, Windows, and
# Linux/glibc. Excluded from musl builds because the Wayland +
# X11 backends (x11rb, wl-clipboard-rs and their transitive deps)
# add ~1 MB to the static musl binary, pushing it over the 30 MB
# CI size gate. Musl builds fall back to OSC 52 only, which works
# in every modern terminal (kitty, alacritty, iTerm2, WezTerm,
# Windows Terminal, tmux with passthrough enabled).
[target.'cfg(not(target_env = "musl"))'.dependencies]
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }

[features]
default = ["mcp", "codex-oauth"]
mcp = ["dep:temm1e-mcp"]
codex-oauth = ["dep:temm1e-codex-oauth"]

[dev-dependencies]
temm1e-test-utils.workspace = true
insta = "1"
