[package]
name = "temm1e-witness"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Witness: pre-committed verification ledger for TEMM1E agents"

[dependencies]
temm1e-core.workspace = true
tokio = { workspace = true, features = ["rt", "time", "sync", "process", "macros", "fs"] }
chrono = { workspace = true, features = ["serde"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror.workspace = true
regex.workspace = true
sha2.workspace = true
hex.workspace = true
toml.workspace = true
reqwest = { workspace = true, features = ["json"] }
glob = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
